# box2d-lite-rs

./: Cargo.toml  LICENSE_MIT  README.md  index.html  readme_by_cema.md
box2d/: Cargo.toml
box2d/src/: arbiter.rs  body.rs  collide.rs  contact.rs  joint.rs  lib.rs  math_utils.rs  world.rs
docs/: index.html
docs/macroquad_version/: macroquad_gui.wasm
docs/resources/: wgpu_gui.d.ts  wgpu_gui.js  wgpu_gui_bg.wasm  wgpu_gui_bg.wasm.d.ts
docs/winit_version/: index.html  package.json  wgpu_gui.d.ts  wgpu_gui.js  wgpu_gui_bg.wasm  wgpu_gui_bg.wasm.d.ts
gui/: Cargo.toml  index.html
gui/src/: buttons.rs  input.rs  lib.rs  physics.rs  primitives.rs  render.rs
gui/src/physics/: demo_scenes.rs  mod.rs
gui/src/render/: draw_primitives.rs  math.rs  mod.rs
gui_macroquad/: Cargo.toml  build.sh  index.html
gui_macroquad/src/: buttons.rs  coords_transformer.rs  main.rs  size_params.rs
physics/: Cargo.toml
physics/src/: demo_scenes.rs  lib.rs  primitives.rs
src/: box2d.rs  input.rs  lib.rs  mouse.rs  physics.rs  primitives.rs  rectangle.rs  render.rs
src/box2d/: arbiter.rs  body.rs  collide.rs  contact.rs  joint.rs  math_utils.rs  world.rs
