[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["XCemaXX <xcemaxx@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = "1.0.0"
log = "0.4.21"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
getrandom = { version = "0.2.14", features = ["js"] }
web-sys = "0.3.69"
winit = "0.29.15"
wgpu = { version = "0.19.4", features = ["webgl"] }
wgpu_text = "0.8.7"
bytemuck = "1.15.0"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
#opt-level = 0