[package]
name = "wgpu-gui"
version = "0.1.0"
authors = ["XCemaXX <xcemaxx@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
physics = { path = "../physics", features = ["random"] }

console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = "1.0.0"
log = "0.4.22"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
getrandom = { version = "0.2.15", features = ["js"] }
web-sys = "0.3.72"
winit = "0.30.5"
wgpu = { version = "22.1.0", features = ["webgl"] }
wgpu_text = "0.9.0"
bytemuck = "1.18.0"
instant = { version = "0.1.13", features = ["wasm-bindgen"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.45"