[package]
name = "wgpu-gui"
version = "0.2.0"
authors = ["XCemaXX <xcemaxx@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
physics = { path = "../physics", features = ["random"] }

console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = "1.0.0"
log = "0.4.26"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
getrandom = { version = "0.2.15", features = ["js"] }
winit = "0.30.9"
wgpu = { version = "25.0.2", default-features = false, features = ["webgl"] }
wgpu_text = "0.9.2"
bytemuck = "1.22.0"
web-sys = { version = "0.3.77", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Node",
    "Text",
] }
futures = "0.3.31"
instant = { version = "0.1.13", features = ["wasm-bindgen"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
