[package]
name = "wgpu-gui"
version = "0.2.0"
authors = ["XCemaXX <xcemaxx@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
physics = { path = "../physics", features = ["random"] }

console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = "1.0.0"
log = "0.4.27"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
winit = "0.30.12"
wgpu = { version = "26.0.1", default-features = false, features = ["webgl"] }
wgpu_text = "26.0.0"
bytemuck = "1.23.2"
web-sys = { version = "0.3.77", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Node",
    "Text",
] }
futures = "0.3.31"
instant = { version = "0.1.13", features = ["wasm-bindgen"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
